--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -46,7 +46,12 @@ textarea {
   font-family: sans-serif; }
 
 body {
-  margin: 0; }
+  margin: 0;
+   }
+html,
+body {
+  height: 100%;
+}
 
 a {
   background: transparent; }
@@ -252,7 +257,9 @@ form select {
   appearance: none; }
 form textarea {
   resize: vertical; }
-
+.site-content {
+  height: 100%;
+}
 /*
  * Reusable Components Style
  */
@@ -1114,7 +1121,7 @@ form textarea {
  * Header Styles
  */
 .site-header {
-  padding: 50px 0; }
+  padding: 15px 0; }
   .site-header .branding {
     float: left; }
     .site-header .branding .logo, .site-header .branding .logo-type {
@@ -1153,6 +1160,7 @@ form textarea {
     .main-navigation .menu-toggle:hover, .main-navigation .menu-toggle:active {
       border-color: #009ad8;
       color: #009ad8; }
+
   .main-navigation .menu {
     list-style: none;
     display: inline-block;
@@ -1184,10 +1192,16 @@ form textarea {
 .mobile-navigation {
   padding: 30px 0 0;
   clear: both;
-  display: none; }
+  display: block; }
+
   @media screen and (min-width: 991px) {
     .mobile-navigation {
       display: none !important; } }
+
+  .mobile-navigation.hidden  {
+    display: none;
+  }
+
   .mobile-navigation .menu {
     background: #262936;
     list-style: none;
@@ -1225,6 +1239,9 @@ form textarea {
     bottom: 5px;
     padding: 0 40px; }
 
+.forecast-table {
+  padding-top: 2em;
+}
 .forecast-container {
   width: 100%;
   background: #323544;
@@ -1243,7 +1260,7 @@ form textarea {
     @media screen and (max-width: 990px) {
       .forecast-container .forecast {
         display: block;
-        width: 16.6667%;
+        width: 33.3333%;
         float: left; } }
     .forecast-container .forecast.today {
       width: 60%; }
@@ -1644,8 +1661,9 @@ form textarea {
  * Footer Styles
  */
 .site-footer {
+
   background: #262936;
-  padding: 50px 0; }
+  padding-top: 20px; }
   .site-footer .subscribe-form {
     position: relative;
     margin-bottom: 30px; }
@@ -1675,3 +1693,5 @@ form textarea {
     .site-footer .social-links a:hover {
       background: #009ad8;
       color: white; }
+
+
