--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,20 +11,23 @@
 
       <!-- Default snippet for navigation -->
       <div class="main-navigation">
-        <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
+        <button type="button" class="menu-toggle" (click)="mobileMenuHidden = !mobileMenuHidden"><i class="fa fa-bars"></i></button>
         <ul class="menu">
           <li class="menu-item" [class.current-menu-item]="selectedCity === item" *ngFor="let item of locations">
-            <a href="#" (click)="selectedCity = item">{{item}}</a>
+            <a href="#" (click)="selectedCity = item"><i>{{item}}</i></a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-toggle more" href="#">...</a>
           </li>
         </ul>
         <!-- .menu -->
       </div>
       <!-- .main-navigation -->
 
-      <div class="mobile-navigation">
+      <div class="mobile-navigation" [class.hidden]="mobileMenuHidden">
         <ul class="menu">
           <li class="menu-item" [class.current-menu-item]="selectedCity === item" *ngFor="let item of locations">
-            <a href="#" (click)="selectedCity = item">{{item}}</a>
+            <a href="#" (click)="selectedCity = item; mobileMenuHidden = !mobileMenuHidden">{{item}}</a>
           </li>
         </ul>
       </div>
@@ -37,8 +40,10 @@
 
     </div>
   </div>
+
   <app-city [city]="selectedCity"></app-city>
 
+  <main class="main-content"></main>
   <footer class="site-footer">
     <div class="container">
       <p class="colophon">Responsive template by Themezy. All rights reserved</p>
