--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
- @import './assets/style.css';
 @import './assets/fonts/font-awesome.min.css';
+@import './assets/site.css';
+@import './assets/header.css';
+@import './assets/forecast.css';
+@import './assets/footer.css';
+
+
