--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -18,7 +18,8 @@ hgroup,
 nav,
 section,
 summary {
-  display: block; }
+  display: block;
+  }
 
 audio,
 canvas,
@@ -45,13 +46,17 @@ select,
 textarea {
   font-family: sans-serif; }
 
-body {
-  margin: 0;
-   }
-html,
-body {
+html {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  display: block;
+  margin: 0;
+  padding: 0;
+  min-height: 100%; }
 
 a {
   background: transparent; }
@@ -61,11 +66,11 @@ a {
     outline: 0; }
 
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0; }
+  font-size: 1.5em;
+  }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.25em;
   margin: 0.83em 0; }
 
 h3 {
@@ -207,26 +212,26 @@ table {
   border-spacing: 0; }
 
 *, *:before, *:after {
-  box-sizing: border-box; }
+  }
 
 /*
  * Global Styles
  */
 html {
-  font-size: 14px; }
+  font-size: 1em; }
 
 body {
   color: #bfc1c8;
   font-family: "Roboto", "Open Sans", sans-serif;
-  font-size: 14px;
   font-weight: 300;
   line-height: 1.5;
   background: #1e202b; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
-  margin: 0 0 20px;
-  line-height: normal; }
+  font-weight: bold;
+  line-height: normal;
+  margin: 0em;
+  }
 
 hr {
   border: none;
@@ -257,16 +262,14 @@ form select {
   appearance: none; }
 form textarea {
   resize: vertical; }
-.site-content {
-  height: 100%;
-}
+
 /*
  * Reusable Components Style
  */
 .button, form input[type="submit"], form button, form input[type="reset"] {
   border: none;
   background: #009ad8;
-  padding: 10px 20px;
+  padding: 1em 1.5em;
   border-radius: 30px;
   color: white; }
 
@@ -274,26 +277,20 @@ form textarea {
   height: 220px; }
 
 .container {
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  *zoom: 1; }
+
+  padding-bottom: 2em;
+  zoom: 1;
+  margin-top: 3em;
+  }
   .container:after {
     content: " ";
     clear: both;
     display: block;
     overflow: hidden;
     height: 0; }
-  @media (min-width: 768px) {
-    .container {
-      width: 750px; } }
-  @media (min-width: 992px) {
-    .container {
-      width: 970px; } }
-  @media (min-width: 1200px) {
-    .container {
-      width: 1170px; } }
 
 .container-fluid {
   margin-right: auto;
@@ -1117,581 +1114,8 @@ form textarea {
 @media print {
   .hidden-print {
     display: none !important; } }
-/*
- * Header Styles
- */
-.site-header {
-  padding: 15px 0; }
-  .site-header .branding {
-    float: left; }
-    .site-header .branding .logo, .site-header .branding .logo-type {
-      display: inline-block;
-      vertical-align: middle; }
-    .site-header .branding .logo {
-      margin-right: 10px; }
-    .site-header .branding .site-title {
-      margin-bottom: 5px;
-      font-size: 16px;
-      font-size: 1.1428571429em;
-      color: white; }
-    .site-header .branding .site-description {
-      font-size: 10px;
-      font-size: 0.7142857143em;
-      display: block;
-      color: #bfc1c8; }
 
-.main-navigation {
-  float: right; }
-  .main-navigation .menu-toggle, .main-navigation .menu {
-    vertical-align: middle; }
-  .main-navigation .menu-toggle {
-    background: none;
-    border: 2px solid transparent;
-    color: white;
-    padding: 20px;
-    border-radius: 40px;
-    -webkit-transition: .3s ease;
-            transition: .3s ease;
-    display: none;
-    outline: none; }
-    @media screen and (max-width: 990px) {
-      .main-navigation .menu-toggle {
-        display: inline-block; } }
-    .main-navigation .menu-toggle:hover, .main-navigation .menu-toggle:active {
-      border-color: #009ad8;
-      color: #009ad8; }
-
-  .main-navigation .menu {
-    list-style: none;
-    display: inline-block;
-    *zoom: 1; }
-    .main-navigation .menu:after {
-      content: " ";
-      clear: both;
-      display: block;
-      overflow: hidden;
-      height: 0; }
-    @media screen and (max-width: 990px) {
-      .main-navigation .menu {
-        display: none; } }
-    .main-navigation .menu .menu-item {
-      float: left;
-      margin-left: 10px; }
-      .main-navigation .menu .menu-item a {
-        padding: 5px 25px;
-        border: 2px solid transparent;
-        border-radius: 30px;
-        color: white;
-        -webkit-transition: .3s ease;
-                transition: .3s ease;
-        font-weight: 400; }
-      .main-navigation .menu .menu-item.current-menu-item a, .main-navigation .menu .menu-item:hover a {
-        border-color: #009ad8;
-        color: #009ad8; }
-
-.mobile-navigation {
-  padding: 30px 0 0;
-  clear: both;
-  display: block; }
-
-  @media screen and (min-width: 991px) {
-    .mobile-navigation {
-      display: none !important; } }
-
-  .mobile-navigation.hidden  {
-    display: none;
-  }
-
-  .mobile-navigation .menu {
-    background: #262936;
-    list-style: none;
-    text-align: center;
-    border-radius: 10px;
-    overflow: hidden; }
-    .mobile-navigation .menu a {
-      padding: 20px;
-      display: block;
-      color: white; }
-    .mobile-navigation .menu .menu-item {
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-      .mobile-navigation .menu .menu-item:last-child {
-        border-bottom: none; }
-      .mobile-navigation .menu .menu-item.current-menu-item a {
-        color: #009ad8; }
-
-.hero {
-  background-size: cover;
-  padding: 70px 0;
-  min-height: 80px; }
-
-.find-location {
-  position: relative;
-  margin-bottom: 70px; }
-  .find-location input[type="text"] {
-    width: 100%;
-    padding: 20px 50px 20px 20px;
-    background: #1e202b;
-    color: white; }
-  .find-location input[type="submit"] {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    bottom: 5px;
-    padding: 0 40px; }
-
-.forecast-table {
-  padding-top: 2em;
+.main-content {
+  padding-top: 3em;
+  display: block;
 }
-.forecast-container {
-  width: 100%;
-  background: #323544;
-  display: table;
-  table-layout: fixed;
-  width: 100%;
-  overflow: hidden;
-  border-radius: 10px;
-  margin-top: -150px;
-  margin-bottom: 50px; }
-  .forecast-container .forecast {
-    display: table-cell;
-    vertical-align: top; }
-    .forecast-container .forecast:nth-child(even) {
-      background-color: #262936; }
-    @media screen and (max-width: 990px) {
-      .forecast-container .forecast {
-        display: block;
-        width: 33.3333%;
-        float: left; } }
-    .forecast-container .forecast.today {
-      width: 60%; }
-      .forecast-container .forecast.today .forecast-header {
-        *zoom: 1; }
-        .forecast-container .forecast.today .forecast-header:after {
-          content: " ";
-          clear: both;
-          display: block;
-          overflow: hidden;
-          height: 0; }
-        .forecast-container .forecast.today .forecast-header .day {
-          float: left; }
-
-        .forecast-container .forecast.today .forecast-header .date {
-          float: right; }
-      .forecast-container .forecast.today .forecast-content {
-        text-align: left;
-        padding-top: 30px;
-        padding-bottom: 30px; }
-      .forecast-container .forecast.today .location {
-        font-size: 18px;
-        font-size: 1.2857142857em;
-        font-weight: 400; }
-      .forecast-container .forecast.today .degree .num, .forecast-container .forecast.today .degree .forecast-icon {
-        display: inline-block;
-        vertical-align: middle; }
-      .forecast-container .forecast.today .degree .num {
-        font-size: 90px;
-        font-size: 6.4285714286rem;
-        margin-right: 30px; }
-      .forecast-container .forecast.today span {
-        margin-right: 20px; }
-        .forecast-container .forecast.today span img {
-          margin-right: 5px;
-          vertical-align: middle; }
-      @media screen and (max-width: 990px) {
-        .forecast-container .forecast.today {
-          display: block;
-          width: 100%; } }
-    .forecast-container .forecast .forecast-header {
-      background: rgba(0, 0, 0, 0.1);
-      padding: 10px;
-      text-align: center;
-      font-weight: 400; }
-    .forecast-container .forecast .forecast-icon {
-      height: 50px; }
-    .forecast-container .forecast .forecast-content {
-      padding: 50px 20px 10px;
-      text-align: center; }
-      .forecast-container .forecast .forecast-content .forecast-icon {
-        margin-bottom: 20px; }
-      .forecast-container .forecast .forecast-content .degree {
-        font-size: 24px;
-        font-size: 1.7142857143em;
-        color: white;
-        font-weight: 700; }
-      .forecast-container .forecast .forecast-content small {
-        font-size: 16px;
-        font-size: 1.1428571429em; }
-
-.fullwidth-block {
-  padding: 70px 0; }
-  .fullwidth-block .section-title {
-    font-size: 36px;
-    font-size: 2.5714285714em;
-    font-weight: 300;
-    color: white; }
-
-.filter {
-  margin-bottom: 30px; }
-
-.filter-control {
-  border: 2px solid #262936;
-  padding: 5px 5px 5px 20px;
-  border-radius: 30px;
-  display: inline-block;
-  white-space: nowrap; }
-  .filter-control label {
-    margin-right: 10px;
-    display: inline-block;
-    padding: 10px;
-    vertical-align: middle; }
-
-.select.control {
-  background: #262936;
-  border-radius: 40px;
-  overflow: hidden;
-  display: inline-block;
-  vertical-align: middle;
-  padding-right: 30px;
-  position: relative; }
-  .select.control:after {
-    content: " ";
-    width: 7px;
-    height: 9px;
-    background: url(images/arrow-down.png);
-    position: absolute;
-    right: 10px;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    display: block;
-    z-index: 1; }
-  .select.control select {
-    padding: 10px 30px;
-    width: 110%;
-    border: none;
-    background: none;
-    outline: none;
-    appearance: none;
-    -webkit-appearance: none;
-    color: white; }
-
-.live-camera {
-  margin-bottom: 30px; }
-  .live-camera .live-camera-cover {
-    position: relative;
-    margin-bottom: 20px;
-    cursor: pointer; }
-    .live-camera .live-camera-cover:after {
-      content: " ";
-      width: 45px;
-      height: 45px;
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-      background: url(images/play-button.png); }
-    .live-camera .live-camera-cover img {
-      display: block;
-      width: 100%;
-      height: auto;
-      max-width: 100%;
-      border-radius: 5px; }
-  .live-camera .location {
-    margin-bottom: 5px;
-    color: white;
-    font-weight: 300; }
-
-.news {
-  padding-left: 100px;
-  position: relative; }
-  .news:after {
-    content: " ";
-    width: 12px;
-    height: 7px;
-    background: url(images/arrow.png);
-    display: block; }
-  .news .date {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #009ad8;
-    font-size: 24px;
-    font-size: 1.7142857143em; }
-  .news h3 {
-    font-size: 14px;
-    font-size: 1em; }
-    .news h3 a {
-      color: white; }
-
-.arrow-feature {
-  list-style-type: none; }
-  .arrow-feature li {
-    position: relative;
-    padding-left: 30px; }
-    .arrow-feature li:before {
-      content: " ";
-      width: 12px;
-      height: 7px;
-      background: url(images/arrow.png);
-      position: absolute;
-      left: 0;
-      top: 5px; }
-    .arrow-feature li h3 {
-      font-size: 14px;
-      font-size: 1em;
-      color: white; }
-
-.arrow-list {
-  list-style-image: url(images/arrow.png);
-  list-style-position: inside; }
-  .arrow-list li {
-    padding: 10px 0;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-    .arrow-list li:last-child {
-      border-bottom: none; }
-  .arrow-list a {
-    color: white; }
-    .arrow-list a:hover {
-      color: #009ad8; }
-
-.photo-grid {
-  margin: 0 -5px; }
-  .photo-grid a {
-    width: 33.333%;
-    padding: 5px;
-    float: left; }
-    .photo-grid a img {
-      display: block;
-      width: 100%;
-      max-width: 100%;
-      height: auto; }
-
-.breadcrumb {
-  background: #262936;
-  border-radius: 40px;
-  padding: 20px 30px;
-  font-size: 13px;
-  font-size: 0.9285714286em; }
-  .breadcrumb a {
-    color: #bfc1c8; }
-    .breadcrumb a:after {
-      content: " ";
-      display: inline-block;
-      vertical-align: middle;
-      width: 12px;
-      height: 7px;
-      background: url(images/arrow-gray.png) no-repeat;
-      margin: 0 10px; }
-    .breadcrumb a:hover {
-      text-decoration: underline; }
-  .breadcrumb span {
-    color: white; }
-
-.post {
-  padding: 50px 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-  .post.single {
-    border-bottom: none; }
-  .post:first-child {
-    padding-top: 0; }
-  .post .entry-title {
-    font-size: 30px;
-    font-size: 2.1428571429em;
-    font-weight: 300;
-    color: white; }
-  .post .featured-image {
-    margin-bottom: 20px; }
-    .post .featured-image img {
-      width: 100%;
-      max-width: 100%;
-      height: auto;
-      border-radius: 5px;
-      display: block; }
-  .post p {
-    margin-bottom: 30px; }
-
-.entry-content blockquote {
-  margin-left: 50px;
-  padding-left: 50px;
-  position: relative; }
-  .entry-content blockquote:before {
-    content: " ";
-    width: 30px;
-    height: 23px;
-    background: url(images/quote.png);
-    position: absolute;
-    top: 0;
-    left: 0; }
-  .entry-content blockquote p {
-    font-size: 24px;
-    font-size: 1.7142857143rem;
-    color: #009ad8; }
-
-.photo {
-  position: relative;
-  padding-left: 50%;
-  min-height: 190px;
-  border-radius: 10px;
-  overflow: hidden;
-  background: #262936;
-  margin-bottom: 30px; }
-  .photo .photo-preview {
-    position: absolute;
-    width: 50%;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    background-size: cover; }
-  .photo .photo-details {
-    padding: 20px; }
-  .photo .photo-title {
-    margin-bottom: 10px;
-    font-weight: 300; }
-    .photo .photo-title a {
-      color: white; }
-
-.star-rating {
-  float: none;
-  overflow: hidden;
-  position: relative;
-  height: 15px;
-  line-height: 15px;
-  font-size: 16px;
-  width: 100px;
-  font-family: 'FontAwesome'; }
-  .star-rating:before {
-    content: "\f005\f005\f005\f005\f005";
-    color: #1e202b;
-    float: left;
-    top: 0;
-    left: 0;
-    position: absolute; }
-  .star-rating span {
-    overflow: hidden;
-    float: left;
-    top: 0;
-    left: 0;
-    position: absolute;
-    padding-top: 1.5em;
-    color: #009ad8;
-    font-size: 16px; }
-  .star-rating span:before {
-    content: "\f005\f005\f005\f005\f005";
-    top: 0;
-    position: absolute;
-    left: 0; }
-
-.contact-details {
-  background: #262936;
-  border-radius: 10px;
-  overflow: hidden; }
-  .contact-details .map {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px; }
-  .contact-details .contact-info {
-    padding: 20px; }
-  .contact-details address {
-    padding-left: 30px;
-    position: relative; }
-    .contact-details address img {
-      position: absolute;
-      left: 0;
-      top: 0; }
-  .contact-details a {
-    margin-right: 20px;
-    color: #bfc1c8; }
-    .contact-details a img {
-      margin-right: 10px;
-      vertical-align: middle; }
-
-.contact-form [class*="col"] {
-  padding: 0 5px; }
-.contact-form .row {
-  margin: 0 -5px; }
-.contact-form input:not([type="submit"]), .contact-form textarea {
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 10px;
-  color: white;
-  border: 2px solid #393c48;
-  background: transparent; }
-  .contact-form input:not([type="submit"]):hover, .contact-form input:not([type="submit"]):focus, .contact-form textarea:hover, .contact-form textarea:focus {
-    border-color: #009ad8; }
-.contact-form textarea {
-  min-height: 150px; }
-.contact-form .text-right {
-  text-align: right; }
-
-.sidebar .widget {
-  background: #262936;
-  border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 30px; }
-  .sidebar .widget .widget-title {
-    font-size: 24px;
-    font-size: 1.7142857143em;
-    margin-bottom: 20px;
-    font-weight: 300; }
-  .sidebar .widget .arrow-list li {
-    border: none; }
-  .sidebar .widget.top-rated {
-    padding: 0; }
-    .sidebar .widget.top-rated .widget-title {
-      padding: 20px 20px 0; }
-    .sidebar .widget.top-rated ul {
-      list-style: none; }
-      .sidebar .widget.top-rated ul li {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        padding: 10px 20px; }
-        .sidebar .widget.top-rated ul li:last-child {
-          border-bottom: none; }
-    .sidebar .widget.top-rated .entry-title {
-      font-size: 14px;
-      font-size: 1em;
-      margin-bottom: 5px;
-      font-weight: 300; }
-      .sidebar .widget.top-rated .entry-title a {
-        color: #bfc1c8; }
-    .sidebar .widget.top-rated .rating strong {
-      color: #009ad8; }
-
-/*
- * Footer Styles
- */
-.site-footer {
-
-  background: #262936;
-  padding-top: 20px; }
-  .site-footer .subscribe-form {
-    position: relative;
-    margin-bottom: 30px; }
-    .site-footer .subscribe-form input[type="text"] {
-      padding: 20px 100px 20px 20px;
-      background: #1e202b;
-      width: 100%;
-      color: white; }
-    .site-footer .subscribe-form input[type="submit"] {
-      position: absolute;
-      right: 5px;
-      top: 5px;
-      bottom: 5px; }
-  .site-footer .social-links a {
-    width: 40px;
-    height: 40px;
-    display: inline-block;
-    border-radius: 50%;
-    background: #1e202b;
-    color: #009ad8;
-    text-align: center;
-    line-height: 2;
-    -webkit-transition: .3s ease;
-            transition: .3s ease;
-    font-size: 20px;
-    font-size: 1.4285714286em; }
-    .site-footer .social-links a:hover {
-      background: #009ad8;
-      color: white; }
-
-
