--- a/src/assets/site.css
+++ b/src/assets/site.css
@@ -1116,6 +1116,11 @@ form textarea {
     display: none !important; } }
 
 .main-content {
-  padding-top: 3em;
   display: block;
 }
+
+progress {
+  width: 100%;
+  height: 5px;
+}
+
