--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -306,8 +306,10 @@ form textarea {
     height: 0; }
 
 .row {
+  /*
   margin-left: -15px;
   margin-right: -15px;
+  */
   *zoom: 1; }
   .row:after {
     content: " ";
@@ -1116,7 +1118,8 @@ form textarea {
     display: none !important; } }
 
 .main-content {
-  display: block;
+  display: inline-block;
+  margin-bottom: 80px;
 }
 
 .alert-container {
@@ -1130,3 +1133,7 @@ form textarea {
   height: 5px;
 }
 
+.fullwidth-block {
+  width: 100%;
+  font-size: 0.93em;  
+}
